--- a/SCAlcohol-Sight/index.html
+++ b/SCAlcohol-Sight/index.html
@@ -4,43 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCAlcohol-Sight</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<header class="header">
-    <h1>SCAlcohol-Sight</h1>
-    <nav>
-        <a href="login.html">Ingresar</a>
-    </nav>
-</header>
+    <!-- NAVBAR -->
+    <header class="navbar">
+        <h1 class="logo">SCAlcohol-Sight</h1>
+        <nav>
+            <button onclick="scrollToSection('nosotros')">Nosotros</button>
+            <button onclick="scrollToSection('servicios')">Servicios</button>
+            <button onclick="goLogin()">Log In</button>
+            <button onclick="goLogin()" class="btn-secondary">Sign In</button>
+        </nav>
+    </header>
 
-<section class="hero">
-    <h2>Controla tu consumo. Cuida tu salud.</h2>
-    <p>Escanea, mide y compara bebidas para tomar decisiones responsables.</p>
-    <a href="login.html" class="btn">Comenzar</a>
-</section>
+    <!-- HERO -->
+    <section class="hero">
+        <h2>Controla tu consumo de alcohol con responsabilidad</h2>
+        <p>Tu salud y bienestar importan. Nuestra app te ayuda a tomar decisiones informadas.</p>
+        <button onclick="goLogin()" class="btn-primary">Comenzar</button>
+    </section>
 
-<section class="features">
-    <div class="feature-card">
-        <h3>Escaneo en tiempo real</h3>
-        <p>Mide tus niveles de alcohol de forma rápida y segura.</p>
-    </div>
+    <!-- NOSOTROS -->
+    <section id="nosotros" class="section">
+        <h2>Sobre Nosotros</h2>
+        <p>
+            SCAlcohol-Sight es una aplicación diseñada para ayudar a los usuarios a monitorear su nivel de alcohol,
+            comparar bebidas y recibir alertas preventivas. Priorizamos tu seguridad con herramientas prácticas y accesibles.
+        </p>
+    </section>
 
-    <div class="feature-card">
-        <h3>Comparador inteligente</h3>
-        <p>Compara marcas y bebidas según tu tolerancia.</p>
-    </div>
+    <!-- SERVICIOS -->
+    <section id="servicios" class="section">
+        <h2>Nuestros Servicios</h2>
 
-    <div class="feature-card">
-        <h3>Alertas preventivas</h3>
-        <p>Recibe avisos cuando superes niveles seguros.</p>
-    </div>
-</section>
+        <div class="services">
 
-<footer class="footer">
-    <p>&copy; 2025 SCAlcohol-Sight</p>
-</footer>
+            <div class="card">
+                <h3>Escaneo de alcohol</h3>
+                <p>Mide tu nivel de alcohol en tiempo real mediante nuestro sistema inteligente.</p>
+            </div>
 
+            <div class="card">
+                <h3>Comparación de bebidas</h3>
+                <p>Compara marcas, contenido alcohólico y obtén recomendaciones personalizadas.</p>
+            </div>
+
+            <div class="card">
+                <h3>Historial de consumo</h3>
+                <p>Revisa tu actividad pasada y evalúa tus patrones de consumo.</p>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        <h4>Canales de atención</h4>
+        <p>Email: soporte@scalcoholsight.com</p>
+        <p>Teléfono: +51 999 999 999</p>
+    </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
