--- a/SCAlcohol-Sight/index.html
+++ b/SCAlcohol-Sight/index.html
@@ -1,62 +1,31 @@
 <!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>SCAlcohol-Sight</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
-<header>
-<nav class="navbar">
-<div class="logo">SCAlcohol Sight</div>
-<ul class="menu">
-<li><button onclick="scrollToSection('inicio')">Inicio</button></li>
-<li><button onclick="scrollToSection('nosotros')">Nosotros</button></li>
-<li><button onclick="scrollToSection('servicios')">Servicios</button></li>
-<li><button onclick="location.href='login.html'" class="login-btn">Log In</button></li>
-</ul>
-</nav>
-</header>
 
+    <header class="header">
+        <img src="assets/logo.png" class="logo">
+        <h1>SCAlcohol-Sight</h1>
+        <nav>
+            <a href="#">Nosotros</a>
+            <a href="login.html">Log In</a>
+            <a href="#">Servicios</a>
+        </nav>
+    </header>
 
-<section id="inicio" class="hero">
-<h1>Gestión inteligente para el control del alcohol</h1>
-<p>Una herramienta moderna para el análisis, registro y gestión de casos clínicos.</p>
-<button class="cta">Comenzar</button>
-</section>
+    <section class="hero">
+        <h2>Controla tu consumo. Cuida tu vida.</h2>
+        <p>Una herramienta diseñada para ayudarte a regular tu consumo de alcohol mediante monitoreo y asistencia.</p>
+        <a class="btn" href="login.html">Comenzar</a>
+    </section>
 
+    <footer class="footer">
+        <p>© 2025 SCAlcohol-Sight — Todos los derechos reservados</p>
+    </footer>
 
-<section id="nosotros" class="section">
-<h2>Sobre Nosotros</h2>
-<p>
-Somos un equipo dedicado al diseño de soluciones tecnológicas enfocadas en el análisis
-del consumo de alcohol. Nuestra plataforma está orientada a mejorar la atención médica y
-brindar herramientas modernas para profesionales de la salud.
-</p>
-</section>
-
-
-<section id="servicios" class="section">
-<h2>Servicios</h2>
-<div class="cards">
-<div class="card">
-<h3>Diagnóstico</h3>
-<p>Evaluación digital del nivel de consumo y riesgos asociados.</p>
-</div>
-<div class="card">
-<h3>Seguimiento</h3>
-<p>Monitoreo del progreso del paciente mediante herramientas interactivas.</p>
-</div>
-<div class="card">
-<h3>Reportes</h3>
-<p>Generación automática de informes clínicos detallados.</p>
-</div>
-</div>
-</section>
-
-
-<footer>
-<p>© SCAlcohol Sight – 2025</p>
-<div class="contact">
-<p>📧 Contacto: soporte@sight.com</p>
-</div>
-</footer>
-
-
-<script src="script.js"></script>
 </body>
 </html>
